# PMM

./: .gitignore  deps
create_test_geometry/: __init__.py  create_test_disk.py  create_test_geometry.py  wavefront_obj_writer.py
data/..git/: HEAD  config  index  packed-refs
data/..git/logs/: HEAD
data/..git/logs/refs/heads/: master
data/..git/refs/heads/: master
libigl/..git/: FETCH_HEAD  config  index  packed-refs  shallow
libigl/..git/logs/: HEAD
libigl/..git/logs/refs/: stash
libigl/..git/logs/refs/heads/: main
libigl/..git/logs/refs/remotes/origin/: HEAD  main
libigl/..git/objects/pack/: pack-38ed1f56907b44c48b9b999a9b8a64c9efc1d939.idx  pack-f413e21472a0754dc08725b0772f8f2b05ea38b4.idx  pack-f413e21472a0754dc08725b0772f8f2b05ea38b4.pack
libigl/..git/refs/: stash
libigl/..git/refs/remotes/origin/: main
libigl/include/igl/: cat.cpp  cotmatrix.cpp  cotmatrix_entries.cpp  dihedral_angles.cpp  edge_lengths.cpp  face_areas.cpp  find.cpp  harmonic.cpp  is_symmetric.cpp  isdiag.cpp  massmatrix.cpp  massmatrix_intrinsic.cpp  min_quad_with_fixed.cpp  min_quad_with_fixed.impl.h  normalize_row_sums.cpp  ray_mesh_intersect.cpp  repmat.cpp  slice.cpp  sparse.cpp  squared_edge_lengths.cpp  unproject_onto_mesh.cpp  volume.cpp
m_files/: read_cpu_double.m  read_cpu_float.m  read_mat.m
pmm/: CMakeLists.txt
pmm/..git/: index
pmm/src/: data_shared_path.h
test/test/..git/: index
test/test/src/: main.cpp
test_cpu/test/src/: Vector3.h  main.cpp  mesh_processing.h  pmm_geodesics_solve.inl
test_cpu/test/src/MatlabUtils/: GMM_Macros.h  Limit_Util.h  MatlabGMMDataExchange.cpp  MatlabInterface.h
test_cpu/test/src/MatlabUtils/gmm/: gmm_inoutput.h
test_cpu/test/src/plf_nanotimer/: plf_nanotimer.h
test_cpu_kernel/test/: CMakeLists.txt  CMakeSettings.json
test_cpu_kernel/test/..git/: index
test_cpu_kernel/test/src/: Point.h  Vector3.cpp  Vector4.h  main.cpp  pmm.h  pmm_geodesics.h  pmm_geodesics_precompute.inl  pmm_geodesics_solve.inl
test_cpu_kernel/test/src/MatlabUtils/: Limit_Util.cpp
test_cuda/test/: CMakeLists.txt
test_cuda/test/..git/: index
test_cuda/test/src/: main.cu  utils_cuda.cpp  utils_perf.h
test_eigen/test/: CMakeLists.txt
test_eigen/test/..git/: index
test_eigen/test/..git/logs/refs/remotes/origin/: HEAD
test_eigen/test/src/: main.cpp
test_gpu/test/: CMakeLists.txt  CMakeSettings.json  example_launch.vs.json
test_gpu/test/..git/: config  index
test_gpu/test/cmake/: FindLIBIGL.cmake
test_gpu/test/src/: Vector4.cpp  main.cpp  main.cu  main_funcs.cpp  main_funcs.h  main_test_accuracy.cpp  main_test_bandwidth.cpp  mesh_processing.cpp  mesh_processing.h  mesh_processing.inl  mesh_processing.inl.bak  pmm.cuh  pmm.h  pmm_geodesics.cuh  pmm_geodesics.h  pmm_geodesics_constants.h  pmm_geodesics_precompute.inl  pmm_geodesics_solve.cu  pmm_geodesics_solve.inl  pmm_geodesics_solve_downwards.inl  pmm_geodesics_solve_kernel.inl  pmm_geodesics_solve_leftwards.inl  pmm_geodesics_solve_rightwards.inl  pmm_geodesics_solve_transpose.inl  pmm_geodesics_solve_upwards.inl  scalar_types.h  utils_cuda.cpp  utils_cuda.h  utils_perf.h
test_gpu/test/src/MatlabUtils/: MatlabGMMDataExchange.h  MatlabInterface.cpp
test_img/test/: CMakeLists.txt
test_img/test/..git/: index
test_img/test/src/: Barycentric.h  basetsd.h  main.cpp
test_img_geo/test/..git/: index  packed-refs
test_img_geo/test/..git/refs/heads/: master
test_img_geo/test/src/: data_shared_path.h  main.cpp
test_matlab/: build.sh  main  run.sh
test_matlab/src/: main.cpp
